#pragma once
class Pos
{
public:
	double x;
	double y;
};