@startuml
title Game画面クラス図

class Pos << (P,#FF7700) ヘッダ >>
{
	double x
	double y
}

class PlayerMove
{
	Pos playerPos
	Pos getPlayerPos()
	void update()
	void init()
}

class PlayerUI
{
	int width
	int height
	void showImage()
}

abstract Enemy
{
	Pos enemyPos
	bool enemyFlag
	{abstract} void init()
	void destroy()
}

class NomalEnemy
{
	void init()
	void showImage()
}

class StrongEnemy
{
	void init()
	void showImage()
}

class GunMove
{
	Pos gunPos
	bool isShot
	void move()
	void setGunPos(Pos pos)
	void setIsShot(bool flag)
	Pos getGunPos()
	bool getIsShot()
}

class GameUI
{
	string scoreText
	void init()
	void update()
}

PlayerMove -- PlayerUI
Enemy <|-- NomalEnemy
Enemy <|-- StrongEnemy
Enemy -- GunMove
PlayerMove -- Enemy
Pos -- PlayerMove
Pos -- Enemy
Pos -- GunMove
GunMove -- ScoreManager
GameUI -- ScoreManager
@enduml